minor refactoring & fix opacity transition not visible when closing menu

--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,6 @@ body {
 }
 
 .js-nav-open .nav-list {
-    visibility: visible;
     opacity:  1;
     transition: opacity 150ms 150ms;
 }
@@ -185,7 +184,6 @@ nav {
 }
 
 .nav-list {
-    visibility: hidden;
     padding: 0;
     margin: 0;
     text-decoration: none;
